--- a/style.css
+++ b/style.css
@@ -92,3 +92,20 @@ body {
   padding-bottom: 8px;
   text-align: center;
 }
+.occurences {
+  font-size: 40px;
+  color: #f9b72a;
+  margin-top: 5px;
+  border: solid 2px #f9b72a;
+  font-weight: bold;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.choice{
+  width: 40px;
+  height: 40px;
+  font-size: 2vw;
+  font-weight: bold;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: #f9b72a;
+  border: solid 2px #f9b72a;
+}
